# api-server

./: .gitignore  Cargo.toml  README.md  compile_all.sh
data/: config.yml
src/: error.rs  lib.rs  main.rs
src/controllers/: files.rs  mod.rs  users.rs
src/db/: mod.rs
src/models/: mod.rs
src/secure/: hash_pass.rs  mod.rs
src/secure/guards/: auth.rs  cors.rs  mod.rs
src/server/: catchers.rs  config.rs  mod.rs
